--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 html {
-  height: 100%
+  height: 100%;
+}
+
+body {
+  background-color: #191c22;
+}
+
+.list-group-item {
+  font-size: small;
+}
+
+.output {
+  background-color: #252a31;
+  color: #17f126;
+  padding: 2em;
+  display: flex;
+  flex: 1;
 }
