--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,17 @@ html {
 body {
   background-color: #191c22;
   height: 100%;
+  color: #ddd;
 }
 
 #root {
   height: 100%;
 }
+
+/* input.form-control,
+input::placeholder {
+  font-size: small;
+} */
 
 .list-group-item {
   font-size: small;
